// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatList /> renders correctly 1`] = `
<a
  className="MuiButtonBase-root-78 MuiListItem-root-66 MuiListItem-default-69 MuiListItem-gutters-74 MuiListItem-button-75"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-81"
  >
    <span
      className="MuiTypography-root-87 MuiTypography-subheading-94 MuiListItemText-primary-84"
    >
      test
    </span>
    <p
      className="MuiTypography-root-87 MuiTypography-body1-96 MuiTypography-colorTextSecondary-120 MuiListItemText-secondary-85"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-122"
  />
</a>
`;

exports[`<ChatList /> renders correctly active 1`] = `
<a
  className="MuiButtonBase-root-78 MuiListItem-root-66 MuiListItem-default-69 MuiListItem-gutters-74 MuiListItem-button-75 ChatListItem-activeItem-65"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-81"
  >
    <span
      className="MuiTypography-root-87 MuiTypography-subheading-94 MuiListItemText-primary-84"
    >
      test
    </span>
    <p
      className="MuiTypography-root-87 MuiTypography-body1-96 MuiTypography-colorTextSecondary-120 MuiListItemText-secondary-85"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-122"
  />
</a>
`;

exports[`<ChatList /> renders correctly disabled 1`] = `
<a
  className="MuiButtonBase-root-78 MuiButtonBase-disabled-79 MuiListItem-root-66 MuiListItem-default-69 MuiListItem-gutters-74 MuiListItem-disabled-72 MuiListItem-button-75"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="-1"
>
  Avatar
  <div
    className="MuiListItemText-root-81"
  >
    <span
      className="MuiTypography-root-87 MuiTypography-subheading-94 MuiListItemText-primary-84"
    >
      test
    </span>
    <p
      className="MuiTypography-root-87 MuiTypography-body1-96 MuiTypography-colorTextSecondary-120 MuiListItemText-secondary-85"
    >
      2 days ago
    </p>
  </div>
</a>
`;
